Tests and configuration files to measure time